Add code to handle a Vehicle class using SQL database and JSP views
Note: For currently unknown reasons I haven't managed to get the
database be stored persistently on file. It is cleared on each restart
even though /spring.jpa.properties.hibernate.hbm2dll.auto=update/ is
set in the application.properties file.

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
+		<!--  Spring Boot Development Tool - provides stuff useful during development -->
+      	<dependency>
+    	    <groupId>org.springframework.boot</groupId>
+    	    <artifactId>spring-boot-devtools</artifactId>
+    	    <optional>true</optional>
+      	</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
