--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
+
+# set database location url
+spring.datasource.url=jdbc:h2:file:./testDB
+
+# how to handle the database when application starts
+# valid values: create|update
+spring.jpa.properties.hibernate.hbm2dll.auto=update
