Fix problem with database wiped out on application (re-)start
Note:
The problem was that the VPP course used the wrong property,
/spring.jpa.properties.hibernate.hbm2dll.auto=update/.

This property did not work for me. Perhaps is has been re-named since
the course was created.

Changed to use /spring.jpa.hibernate.ddl-auto = update/.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,11 @@ spring.datasource.url=jdbc:h2:file:./testDB
 
 # how to handle the database when application starts
 # valid values: create|update
-spring.jpa.properties.hibernate.hbm2dll.auto=update
+
+# This does not work!!! Might have changed since the course was created.
+# spring.jpa.properties.hibernate.hbm2dll.auto=update
+
+spring.jpa.hibernate.ddl-auto = update
+
+# print out sql db calls to console
+spring.jpa.show-sql=true
