Minor clean up of comments and stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.mvc.view.suffix:.jsp
 
 # set database location url
 spring.datasource.url=jdbc:h2:file:./testDB
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+# perhaps not needed:
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+# -> localhost:8080/h2
+#
 
 # how to handle the database when application starts
 # valid values: create|update
@@ -14,3 +21,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 # print out sql db calls to console
 spring.jpa.show-sql=true
+
+# LiveReload server
+#spring.devtools.livereload.enabled=false
